examples/test/testpolicy3256.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3256
  namespace: namespace249
spec:
  podSelector:
    matchLabels:
      key38: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value49
      podSelector:
        matchLabels:
          key42: value6
          key44: value49
          key45: value15
